--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <canvas id="gameCanvas"></canvas>
+    <div id="gameContainer">
+      <canvas id="gameCanvas"></canvas>
+    </div>
+    <div class="button-container">
+      <button class="button">Button 1</button>
+      <button class="button">Button 2</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
