--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tank Game</title>
     <link rel="stylesheet" href="styles.css" />
+    <script></script>
   </head>
   <body>
     <div id="gameContainer">
       <canvas id="gameCanvas"></canvas>
     </div>
     <div class="button-container">
-      <button class="button">Button 1</button>
+      <button onclick="clearRect()" class="button">cleer wrecked</button>
       <button class="button">Button 2</button>
     </div>
     <script src="script.js"></script>
