don't know what even is going on anymore

--- a/game/index.html
+++ b/game/index.html
@@ -14,9 +14,7 @@
       <button onclick="move()" class="button">move</button>
       <button onclick="shoot()" class="button">shoot</button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/matter-js@0.17.1/build/matter.min.js"></script>
-    <!-- Include Matter.js -->
+    <script src="libraries/matter.js"></script>
     <script src="script.js"></script>
-    <!-- Custom Game Script -->
   </body>
 </html>
