added tank and reactor object files

--- a/game/index.html
+++ b/game/index.html
@@ -16,5 +16,7 @@
     </div>
     <script src="libraries/matter.js"></script>
     <script src="script.js"></script>
+    <script src="objects/tank.js"></script>
+    <script src="objects/reactor.js"></script>
   </body>
 </html>
