added second object for collision testing

--- a/game/index.html
+++ b/game/index.html
@@ -11,8 +11,8 @@
       <canvas id="gameCanvas"></canvas>
     </div>
     <div class="button-container">
-      <button onclick="move()" class="button">move</button>
-      <button onclick="shoot()" class="button">shoot</button>
+      <button class="button">move</button>
+      <button class="button">shoot</button>
     </div>
     <script src="libraries/matter.js"></script>
     <script src="objects/tank.js"></script>
