--- a/game/index.html
+++ b/game/index.html
@@ -6,7 +6,7 @@
     <title>Tank Game</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body id="bodyContainer">
     <div id="gameContainer">
       <canvas id="gameCanvas"></canvas>
     </div>
