--- a/game/index.html
+++ b/game/index.html
@@ -7,12 +7,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body id="bodyContainer">
-    <div id="gameContainer">
-      <canvas id="gameCanvas"></canvas>
+    <div id="gameAndPowerContainer">
+      <div id="gameContainer">
+        <canvas id="gameCanvas"></canvas>
+      </div>
+      <div id="powerMeterContainer">
+        <div id="powerMeterFill"></div>
+      </div>
     </div>
     <div class="button-container">
       <button class="button">move</button>
       <button class="button">shoot</button>
+      <button class="button" id="powerButton">power</button>
     </div>
     <script src="libraries/matter.js"></script>
     <script src="objects/tank.js"></script>
