broke everything. added game states. need to change ctx to matter canvas

--- a/tests-and-research/canvas-api-work/index.html
+++ b/tests-and-research/canvas-api-work/index.html
@@ -15,6 +15,7 @@
       <button onclick="clearRect()" class="button">cleer wrecked</button>
       <button class="button">Button 2</button>
     </div>
-    <script src="script.js"></script>
+    <script src="libraries/matter.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
