--- a/game/index.html
+++ b/game/index.html
@@ -22,6 +22,6 @@
     <script src="libraries/matter.js"></script>
     <script src="objects/tank.js"></script>
     <script src="objects/reactor.js"></script>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
