reorganized EVERYTHING, added action mode, event listeners for buttons

--- a/game/index.html
+++ b/game/index.html
@@ -15,13 +15,13 @@
         <div id="powerMeterFill"></div>
       </div>
       <div class="button-container">
-        <button class="button">move</button>
-        <button class="button">shoot</button>
+        <button id="moveButton" class="button">move</button>
+        <button id="shootButton" class="button">shoot</button>
       </div>
     </div>
     <script src="libraries/matter.js"></script>
     <script src="objects/tank.js"></script>
     <script src="objects/reactor.js"></script>
-    <script src="script2.js"></script>
+    <script src="script3.js"></script>
   </body>
 </html>
