--- a/game/index.html
+++ b/game/index.html
@@ -22,6 +22,7 @@
     <script src="libraries/matter.js"></script>
     <script src="objects/tank.js"></script>
     <script src="objects/reactor.js"></script>
+    <script src="objects/shell.js"></script>
     <script src="script3.js"></script>
   </body>
 </html>
