--- a/game/index.html
+++ b/game/index.html
@@ -23,6 +23,6 @@
     <script src="objects/tank.js"></script>
     <script src="objects/reactor.js"></script>
     <script src="objects/shell.js"></script>
-    <script src="script3.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
