--- a/game/index.html
+++ b/game/index.html
@@ -20,10 +20,10 @@
       </div>
     </div>
     <script src="libraries/matter.js"></script>
-    <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript"></script>
+    <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript" defer></script>
     <script src="objects/tank.js"></script>
     <script src="objects/reactor.js"></script>
     <script src="objects/shell.js"></script>
-    <script src="script.js"></script>
+    <script src="script4.js"></script>
   </body>
 </html>
