--- a/game/index2.html
+++ b/game/index2.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tank Game</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles2.css" />
   </head>
   <body id="bodyContainer">
     <div id="gameAndPowerContainer">
       <div id="gameContainer">
-        <canvas id="gameCanvas"></canvas>
-      </div>
-      <div id="powerMeterContainer">
-        <div id="powerMeterFill"></div>
-      </div>
-      <div class="button-container">
-        <button id="moveButton" class="button">move</button>
-        <button id="shootButton" class="button">shoot</button>
+        <canvas id="drawCanvas"></canvas>
+        <canvas id="physicsCanvas"></canvas>
       </div>
     </div>
     <script src="libraries/matter.js"></script>
@@ -24,6 +18,6 @@
     <script src="objects/tank.js"></script>
     <script src="objects/reactor.js"></script>
     <script src="objects/shell.js"></script>
-    <script src="script.js"></script>
+    <script src="script4.js"></script>
   </body>
 </html>
