--- a/game/drawingindex.html
+++ b/game/drawingindex.html
@@ -18,6 +18,6 @@
     <script src="objects/tank.js"></script>
     <script src="objects/reactor.js"></script>
     <script src="objects/shell.js"></script>
-    <script src="script4.js"></script>
+    <script src="objectsScript.js"></script>
   </body>
 </html>
