--- a/game/objectsindex.html
+++ b/game/objectsindex.html
@@ -22,6 +22,7 @@
     <script src="libraries/matter.js"></script>
     <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript" defer></script>
     <script src="objects/tank.js"></script>
+    <script src="objects/fortress.js"></script>
     <script src="objects/reactor.js"></script>
     <script src="objects/shell.js"></script>
     <script src="objectsScript.js"></script>
