turrets can fire shells now

--- a/game/objectsindex.html
+++ b/game/objectsindex.html
@@ -24,6 +24,7 @@
     <script src="objects/tank.js"></script>
     <script src="objects/fortress.js"></script>
     <script src="objects/reactor.js"></script>
+    <script src="objects/turret.js"></script>
     <script src="objects/shell.js"></script>
     <script src="objectsScript.js"></script>
   </body>
