--- a/game/5index.html
+++ b/game/5index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tank Game</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="5styles.css" />
   </head>
   <body id="bodyContainer">
     <div id="gameAndPowerContainer">
       <div id="gameContainer">
-        <canvas id="gameCanvas"></canvas>
+        <canvas id="drawCanvas"></canvas>
+        <canvas id="physicsCanvas"></canvas>
       </div>
       <div id="powerMeterContainer">
         <div id="powerMeterFill"></div>
@@ -22,8 +23,10 @@
     <script src="libraries/matter.js"></script>
     <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript" defer></script>
     <script src="objects/tank.js"></script>
+    <script src="objects/fortress.js"></script>
     <script src="objects/reactor.js"></script>
+    <script src="objects/turret.js"></script>
     <script src="objects/shell.js"></script>
-    <script src="oldscript.js"></script>
+    <script src="5script.js"></script>
   </body>
 </html>
