deleted old files

--- a/game/index.html
+++ b/game/index.html
@@ -9,7 +9,8 @@
   <body id="bodyContainer">
     <div id="gameAndPowerContainer">
       <div id="gameContainer">
-        <canvas id="gameCanvas"></canvas>
+        <canvas id="drawCanvas"></canvas>
+        <canvas id="physicsCanvas"></canvas>
       </div>
       <div id="powerMeterContainer">
         <div id="powerMeterFill"></div>
@@ -22,8 +23,10 @@
     <script src="libraries/matter.js"></script>
     <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript" defer></script>
     <script src="objects/tank.js"></script>
+    <script src="objects/fortress.js"></script>
     <script src="objects/reactor.js"></script>
+    <script src="objects/turret.js"></script>
     <script src="objects/shell.js"></script>
-    <script src="oldscript.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
