--- a/game/index.html
+++ b/game/index.html
@@ -22,6 +22,7 @@
     </div>
     <script src="libraries/matter.js"></script>
     <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript" defer></script>
+    <script src="objects/collisionCategories.js"></script>
     <script src="objects/tank.js"></script>
     <script src="objects/fortress.js"></script>
     <script src="objects/reactor.js"></script>
