--- a/game/index.html
+++ b/game/index.html
@@ -12,14 +12,21 @@
         <canvas id="drawCanvas"></canvas>
         <canvas id="physicsCanvas"></canvas>
       </div>
-      <div id="powerMeterContainer">
-        <div id="powerMeterFill"></div>
-      </div>
-      <div class="button-container">
-        <button id="moveButton" class="button">move</button>
-        <button id="shootButton" class="button">shoot</button>
+
+      <div id="sideContainer">
+        <div id="powerMeterContainer">
+          <div id="powerMeterFill"></div>
+        </div>
+        <div class="button-container">
+          <button id="moveButton" class="button">move</button>
+          <button id="shootButton" class="button">shoot</button>
+        </div>
+        <div id="turnTimerContainer">
+          <div id="turnTimer">45</div>
+        </div>
       </div>
     </div>
+
     <script src="libraries/matter.js"></script>
     <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript" defer></script>
     <script src="objects/collisionCategories.js"></script>
