--- a/game/index.html
+++ b/game/index.html
@@ -15,6 +15,8 @@
 
       <div id="sideContainer">
         <div id="powerMeterContainer">
+          <div id="rewardZone"></div>
+          <div id="punishmentZone"></div>
           <div id="powerMeterFill"></div>
         </div>
         <div class="button-container">
