laid down basic structure for rules modal

--- a/game/index.html
+++ b/game/index.html
@@ -22,10 +22,31 @@
         <div class="button-container">
           <button id="moveButton" class="button">move</button>
           <button id="shootButton" class="button">shoot</button>
+          <button id="endDrawButton" class="button">Letz play!</button>
         </div>
         <div id="turnTimerContainer">
-          <div id="turnTimer">45</div>
+          <div id="Timer">45</div>
         </div>
+        <div id="rulzButtonContainer">
+          <button id="rulzButton" class="button">Rulz</button>
+        </div>
+      </div>
+    </div>
+
+    <div id="rulzModal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Game Rulz</h2>
+        <p>
+          <!-- Your rules content goes here -->
+          Welcome to the Digital Paper Warfare! Here are the termz of war:
+          <ul>
+            <li>Each player controls two tanks and two turrets.</li>
+            <li>Players take turns to move or shoot.</li>
+            <li>Destroy the opponent's reactors to win.</li>
+            <!-- Add more rules as needed -->
+          </ul>
+        </p>
       </div>
     </div>
 
