--- a/game/index.html
+++ b/game/index.html
@@ -39,12 +39,12 @@
         <h2>Game Rulz</h2>
         <p>
           <!-- Your rules content goes here -->
-          Welcome to the Digital Paper Warfare! Here are the termz of war:
+          Welcome to the Digital Paper Warfare! Here are the terms of war:
           <ul>
             <li>Each player controls two tanks and two turrets.</li>
             <li>Players take turns to move or shoot.</li>
-            <li>Destroy the opponent's reactors to win.</li>
-            <!-- Add more rules as needed -->
+            <li>Destroy both of the opponent's tanks, or one of their reactors to win.</li>
+            
           </ul>
         </p>
       </div>
