--- a/game/2index.html
+++ b/game/2index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tank Game</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="2styles.css" />
   </head>
   <body id="bodyContainer">
     <div id="gameAndPowerContainer">
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div id="rulzModal" class="modal">
+    <div id="rulesModal" class="modal">
       <div class="modal-content">
         <span class="close-button">&times;</span>
         <h2>Game Rulz</h2>
@@ -56,6 +56,6 @@
     <script src="objects/reactor.js"></script>
     <script src="objects/turret.js"></script>
     <script src="objects/shell.js"></script>
-    <script src="script.js"></script>
+    <script src="2script.js"></script>
   </body>
 </html>
