deleted old files

--- a/game/index.html
+++ b/game/index.html
@@ -33,25 +33,23 @@
       </div>
     </div>
 
-    <div id="rulzModal" class="modal">
+    <div id="rulesModal" class="modal">
       <div class="modal-content">
         <span class="close-button">&times;</span>
         <h2>Game Rulz</h2>
         <p>
-          <!-- Your rules content goes here -->
           Welcome to the Digital Paper Warfare! Here are the terms of war:
           <ul>
             <li>Each player controls two tanks and two turrets.</li>
             <li>Players take turns to move or shoot.</li>
-            <li>Destroy both of the opponent's tanks, or one of their reactors to win.</li>
-            
+            <li>Destroy both of the opponent's tanks, or one of their reactors to win.
+            </li>
           </ul>
         </p>
       </div>
     </div>
 
     <script src="libraries/matter.js"></script>
-    <script src="libraries/poly-decomp.js/build/decomp.js" type="text/javascript" defer></script>
     <script src="objects/collisionCategories.js"></script>
     <script src="objects/tank.js"></script>
     <script src="objects/fortress.js"></script>
